project/stage/testing/lexical/parse_tests/tests/reject/bad_literals/print/bad_float.ul
void main() {

    print 0.111k;
}
